--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Active Resume</title>
+		<title>Think Ruby</title>
 		<link href="stylesheets/screen.css" media="screen" rel="stylesheet" type="text/css" />
 		<link href="http://fonts.googleapis.com/css?family=Gruppo" rel="stylesheet" type="text/css" />
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.0/jquery.min.js" type="text/javascript"></script>
