--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<script src="javascripts/main.js" type="text/javascript"></script>
 	</head>
 	<body>
-		<a href="https://github.com/ThinkRuby/thinkruby" target="_new"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://assets2.github.com/img/e6bef7a091f5f3138b8cd40bc3e114258dd68ddf?repo=&url=http%3A%2F%2Fs3.amazonaws.com%2Fgithub%2Fribbons%2Fforkme_right_red_aa0000.png&path=" alt="Fork me on GitHub"></a>
+		<a href="https://github.com/ThinkRuby/thinkruby" target="_new"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://assets2.github.com/img/e6bef7a091f5f3138b8cd40bc3e114258dd68ddf?repo=&amp;url=http%3A%2F%2Fs3.amazonaws.com%2Fgithub%2Fribbons%2Fforkme_right_red_aa0000.png&amp;path=" alt="Fork me on GitHub"></a>
 		<div class="main">
 			<a href="http://www.thinkruby.org"><img src="images/thinkruby.png" alt="Think Ruby"></img></a>
 			<h1><a href="http://www.thinkruby.org" class="think_ruby">Think Ruby</a> is a project to translate <a href="http://greenteapress.com/thinkpython/thinkpython.html" target="_new" class="python">Think Python</a> into <a href="http://ruby-lang.org" target="_new" class="ruby">Ruby</a>.</h1>
